gke-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"hello"},"name":"hello","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"hello"}},"template":{"metadata":{"labels":{"app":"hello"}},"spec":{"containers":[{"image":"gcr.io/devops-project-299312/demo-python-app","imagePullPolicy":"IfNotPresent","livenessProbe":{"httpGet":{"path":"/","port":5000}},"name":"hello","ports":[{"containerPort":5000}],"readinessProbe":{"httpGet":{"pa [...]
  creationTimestamp: "2020-12-27T18:31:16Z"
  generation: 6
  labels:
    app: hello
  name: hello
  namespace: default
  resourceVersion: "3115870"
  selfLink: /apis/apps/v1/namespaces/default/deployments/hello
  uid: 6faa6359-b9be-4695-845b-77493ee4ae29
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: gcr.io/devops-project-299312/demo-python-app
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: hello
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 5000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2020-12-27T18:31:16Z"
    lastUpdateTime: "2020-12-27T23:13:41Z"
    message: ReplicaSet "hello-b8c86ccbf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2020-12-29T15:00:52Z"
    lastUpdateTime: "2020-12-29T15:00:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 6
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
