gke-manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: hello
  namespace: default
spec: 
  ports: 
    - 
      name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector: 
    app: hello
  type: NodePort
