gke-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: devops-project-static-ip
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    kubernetes.io/ingress.allow-http: "false"
  labels:
    app: hello
spec:
  backend:
    serviceName: hello
    servicePort: 80
  tls:
  - secretName: hello-tls-secret
    hosts:
    - gcp.kutumba.xyz
